--- a/libwhisper/build.gradle
+++ b/libwhisper/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.library'
+    id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
@@ -13,6 +13,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
+        applicationId "world.coalition.whisper"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -41,23 +42,23 @@ android {
     }
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-                groupId = 'com.github.NodleCode'
-                artifactId = 'libwhisper'
-                version = '3.0'
-            }
-        }
-    }
-}
+//afterEvaluate {
+//    publishing {
+//        publications {
+//            release(MavenPublication) {
+//                from components.release
+//                groupId = 'com.github.NodleCode'
+//                artifactId = 'libwhisper'
+//                version = '3.0'
+//            }
+//        }
+//    }
+//}
 
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api group: 'org.slf4j', name:'slf4j-api', version: '1.7.30'
+    api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
 
     // crypto
     api group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.65'
@@ -68,6 +69,8 @@ dependencies {
     // room database
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt "androidx.room:room-compiler:$room_version"
     // debug-only can browse the DB in desktop browser
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
